// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots view 1`] = `
<div
  className="NotesFeed"
  style={
    Object {
      "fontSize": 14,
      "margin": 10,
    }
  }
>
  <div
    className="SectionHeading"
    style={
      Object {
        "borderBottom": "1px solid #333",
        "padding": 10,
      }
    }
  >
    <h4
      style={
        Object {
          "color": "black",
          "display": "inline",
        }
      }
    >
      My notes
    </h4>
  </div>
  <div
    style={
      Object {
        "color": "#aaa",
        "margin": 10,
        "marginTop": 20,
      }
    }
  >
    Showing 
    5
     notes
  </div>
  <div
    className="feed"
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <div
      className="notes-list"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        className="NotesList"
      >
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                SST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                MTSS Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                MTSS Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/10"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                Disney
                , 
                Donald
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/2"
              >
                Arthur D Healey
              </a>
            </p>
            <p>
              <a
                className="homeroom-link"
                href="/homerooms/1"
              >
                Homeroom HEA 003
              </a>
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 20, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                SST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Donald's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/10"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                Disney
                , 
                Donald
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/2"
              >
                Arthur D Healey
              </a>
            </p>
            <p>
              <a
                className="homeroom-link"
                href="/homerooms/1"
              >
                Homeroom HEA 003
              </a>
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                July 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                BBST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="NoteText"
                style={
                  Object {
                    "border": 0,
                    "fontFamily": "'Open Sans', sans-serif",
                    "fontSize": 14,
                    "marginTop": 5,
                    "outline": "1px solid transparent",
                    "overflowX": "hidden",
                    "padding": 0,
                    "whiteSpace": "pre-wrap",
                    "wordBreak": "break-word",
                  }
                }
              >
                Note
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    />
  </div>
</div>
`;

exports[`snapshots view with wordcloud 1`] = `
<div
  className="NotesFeed"
  style={
    Object {
      "fontSize": 14,
      "margin": 10,
    }
  }
>
  <div
    className="SectionHeading"
    style={
      Object {
        "borderBottom": "1px solid #333",
        "padding": 10,
      }
    }
  >
    <h4
      style={
        Object {
          "color": "black",
          "display": "inline",
        }
      }
    >
      My notes
    </h4>
  </div>
  <div
    style={
      Object {
        "color": "#aaa",
        "margin": 10,
        "marginTop": 20,
      }
    }
  >
    Showing 
    5
     notes
  </div>
  <div
    className="feed"
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <div
      className="notes-list"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        className="NotesList"
      >
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                SST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                MTSS Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/79"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                White
                , 
                Elsa
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/9"
              >
                Somerville High
              </a>
            </p>
            <p>
              10
              th Grade
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                MTSS Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Elsa's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/10"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                Disney
                , 
                Donald
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/2"
              >
                Arthur D Healey
              </a>
            </p>
            <p>
              <a
                className="homeroom-link"
                href="/homerooms/1"
              >
                Homeroom HEA 003
              </a>
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                August 20, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                SST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="RestrictedNotePresence"
              >
                <div>
                  <div
                    className="NoteText"
                    style={
                      Object {
                        "border": 0,
                        "color": "#999",
                        "fontFamily": "'Open Sans', sans-serif",
                        "fontSize": 14,
                        "marginTop": 5,
                        "outline": "1px solid transparent",
                        "overflowX": "hidden",
                        "padding": 0,
                        "whiteSpace": "pre-wrap",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    To respect Donald's privacy, Uri or an administrator marked this note as restricted.
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="wrapper"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="studentCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "25%",
              }
            }
          >
            <p>
              <a
                href="/students/10"
                style={
                  Object {
                    "color": "#3177c9",
                    "fontSize": "18px",
                    "fontWeight": "bold",
                    "marginBottom": "5%",
                  }
                }
              >
                Disney
                , 
                Donald
              </a>
            </p>
            <p>
              <a
                className="school-link"
                href="/schools/2"
              >
                Arthur D Healey
              </a>
            </p>
            <p>
              <a
                className="homeroom-link"
                href="/homerooms/1"
              >
                Homeroom HEA 003
              </a>
            </p>
          </div>
          <div
            className="NoteCard"
            style={
              Object {
                "border": "1px solid #eee",
                "marginBottom": 10,
                "marginTop": 10,
                "padding": 15,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <span
                className="date"
                style={
                  Object {
                    "display": "inline-block",
                    "fontWeight": "bold",
                    "paddingRight": 10,
                    "width": "11em",
                  }
                }
              >
                July 23, 2018
              </span>
              <span
                style={
                  Object {
                    "background": "#eee",
                    "display": "inline-block",
                    "marginLeft": 10,
                    "marginRight": 10,
                    "outline": "3px solid #eee",
                    "textAlign": "center",
                    "width": "10em",
                  }
                }
              >
                BBST Meeting
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "paddingLeft": 5,
                  }
                }
              >
                <a
                  className="Educator"
                  href="mailto:uri@demo.studentinsights.org"
                  style={Object {}}
                >
                  Uri Disney
                </a>
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": 10,
                }
              }
            >
              <div
                className="NoteText"
                style={
                  Object {
                    "border": 0,
                    "fontFamily": "'Open Sans', sans-serif",
                    "fontSize": 14,
                    "marginTop": 5,
                    "outline": "1px solid transparent",
                    "overflowX": "hidden",
                    "padding": 0,
                    "whiteSpace": "pre-wrap",
                    "wordBreak": "break-word",
                  }
                }
              >
                Note
              </div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "space-between",
                    "marginTop": 15,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
                <span
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <div>
        <div
          className="Card BoxCard "
          style={
            Object {
              "border": "1px solid #ccc",
              "borderRadius": 3,
              "display": "flex",
              "flexDirection": "column",
              "margin": 20,
              "padding": 0,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#eee",
                "borderBottom": "1px solid #ccc",
                "color": "black",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": 10,
              }
            }
          >
            Most common words
          </div>
          <canvas
            className="WordCloud"
            height={400}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            width={400}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
